--- a/package.json
+++ b/package.json
@@ -2,10 +2,16 @@
   "name": "helperjs",
   "version": "1.0.0",
   "description": "Helper Functions JavaScript",
-  "main": "index.js",
+  "main": "build/index.js",
+  "module": "build/index.es.js",
+  "jsnext:main": "build/index.es.js",
   "scripts": {
+    "build": "rollup -c",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "files": [
+    "build"
+  ],
   "repository": {
     "type": "git",
     "url": "git+https://github.com/aguinaldotupy/helperjs.git"
@@ -22,6 +28,11 @@
   },
   "homepage": "https://github.com/aguinaldotupy/helperjs#readme",
   "devDependencies": {
+    "rollup": "^2.2.0",
+    "rollup-plugin-commonjs": "^10.1.0",
+    "rollup-plugin-node-resolve": "^5.2.0",
+    "rollup-plugin-peer-deps-external": "^2.2.2",
+    "rollup-plugin-typescript2": "^0.27.0",
     "typescript": "^3.8.3"
   }
 }
