--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@tupy/helperjs",
+  "name": "tupy-helperjs",
   "version": "1.0.0",
   "description": "Helper Functions JavaScript",
   "main": "build/index.js",
