add function debounce and improvements in toCurrency

--- a/package.json
+++ b/package.json
@@ -28,19 +28,19 @@
   },
   "homepage": "https://github.com/aguinaldotupy/helperjs#readme",
   "devDependencies": {
-    "@types/jest": "^25.1.4",
-    "jest": "^25.2.3",
+    "@types/jest": "^26.0.14",
+    "jest": "^26.4.2",
     "rollup": "^2.2.0",
     "rollup-plugin-commonjs": "^10.1.0",
     "rollup-plugin-node-resolve": "^5.2.0",
     "rollup-plugin-peer-deps-external": "^2.2.2",
     "rollup-plugin-typescript2": "^0.27.0",
-    "ts-jest": "^25.2.1",
+    "ts-jest": "^26.4.1",
     "typescript": "^3.8.3"
   },
   "jest": {
     "preset": "ts-jest",
-    "testEnvironment": "node"
+    "testEnvironment": "jsdom"
   },
   "publishConfig": {
     "registry": "https://registry.npmjs.org/"
