--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "license": "MIT",
   "scripts": {
     "build": "rollup -c",
-    "test": "jest --coverage"
+    "test": "jest --coverage --silent"
   },
   "files": [
     "build"
